		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.4 *-

28082002 (v2.1dev11)
	- added: configure-check for socket libraries
	- added: -evp - volume peak watcher operator
	- added: initial support for LADSPA v1.1 API for plugin 
		 parameter defaults (as used in swh-0.2.8 plugin 
		 set); updated ladspa.h included in the source tree
	- changed: rewrite of all user-interface code that's
		   in the ecasound-x.y.z/ecasound directory
	- changed: added chainop and controller parameter 
		   descriptions back to ecasound's command-line 
		   help (--help/-h)
	- changed: ecasignalview rewritten; segfault bugs fixed,
		   consumes less cpu-resources, better interface
	- changed: ecasoundrc - default command for ogg playback
		   to catch up with the ogg 1.0 release
	- changed: new sample format conversion routines along
	  	   with unit tests
        - fixed: a long-standing bug in ecaplay that caused it 
		 to segfault with big playlists
	- fixed: LADSPA_PATH env.variable not parsed correctly
	- fixed: floating-point exceptions when run on alpha-linux
	- fixed: libecasound_tester failed on machines without
	 	 the LADSPA SDK plugins installed
	- fixed: ia-mode - ctrl-d didn't exit as it should; this
		 broke shell scripts that used pipes to communicate
	         with ecasound
24062002 (v2.1dev10)
	- added: -G:mgrtype,optstring switch for setting 
		 audio object manager level options
	- added: -G:jack,client_name,operation_mode option; see 
	         ecasound(1) for details
	- added: --enable-all-static configure option
	- added: --disable-jack configure option; disable JACK
		 support even if all required libs and headers
		 are found