@@ -23,7 +23,7 @@
 <hr>
 
 <h1>ecasound</h1>
-<h2>17.07.2002</h2>
+<h2>22.08.2002</h2>
 
 
     
@@ -252,6 +252,13 @@ a null audio device is created. This is useful if you just want
 to analyze sample data without writing it to a file. There's 
 also a realtime variant, "rtnull", which behaves just like "null" 
 objects, except all i/o is done at realtime speed.
+<p><p></p><dt><strong>Resample - access object of different sample rates</strong><dd>
+Object type 'resample' can be used to resample audio 
+object's audio data to match the sampling rate used
+in the active chainsetup. For example, 
+<strong>ecasound -f:16,2,44100 -i resample,22050,foo.wav -o /dev/dsp</strong>,
+will resample file from 22.05kHz to 44.1kHz and write the
+result to the soundcard device.
 <p><p></p><dt><strong>Reverse - process audio data backwards</strong><dd>
 Object type 'reverse' can be used to reverse audio 
 data coming from an audio object. As an example, 
