@@ -74,6 +74,7 @@
 #include "audioio-null.h"
 #include "audioio-rtnull.h"
 #include "audioio-typeselect.h"
+#include "audioio-resample.h"
 #include "audioio-reverse.h"
 
 #include "midiio-raw.h"
@@ -185,6 +186,7 @@ void ECA_STATIC_OBJECT_MAPS::register_audio_io_nonrt_objects(ECA_OBJECT_MAP* obj
   objmap->register_object("stdout", "^stdout$", raw);
   objmap->register_object("null", "^null$", new NULLFILE());
   objmap->register_object("typeselect", "^typeselect$", new AUDIO_IO_TYPESELECT());
+  objmap->register_object("resample", "^resample$", new AUDIO_IO_RESAMPLE());
   objmap->register_object("reverse", "^reverse$", new AUDIO_IO_REVERSE());
 }
 
